--- a/templates/User/userProfile.html
+++ b/templates/User/userProfile.html
@@ -28,8 +28,21 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css'%}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
+	<link href="{% static 'vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+
 <!--===============================================================================================-->
 <style>
+	.socialicons-designs{
+			font-size: 25px;
+			background: white;
+			color:black;
+			padding: 8px 12px 8px 12px;
+			border-radius: 10px;
+		}
+		.socialicons-designs:hover{
+			background-color: black;
+			color:white;
+		}
 	 .test a {
             font-family: Poppins-Medium;
             font-size: 20px;
@@ -170,37 +183,27 @@
 		<div class="container-menu-desktop trans-03">
 			<div class="wrap-menu-desktop">
 				<nav class="limiter-menu-desktop p-l-45">
-					
-					<!-- Logo desktop -->		
-					<a href="" class="logo">
-						<img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO">
-					</a>
-
-					<!-- Menu desktop -->
-					<div class="menu-desktop">
-						<ul class="main-menu">
-							<li class="active-menu">
-								<a href="">Home</a>
-							</li>
-
-							<li class="label1" data-label1="new">
-								<a href="">Shop</a>
-							</li>
-						</ul>
-					</div>		
+					<div class="logo-mobile">
+						<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+					</div>
+					<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
+						<span class="test mr-4">
+							<a href="#" class="text-dark">Log Out</a>
+						</span>
+					</div>
 				</nav>
 			</div>	
 		</div>
 
 		<!-- Header Mobile -->
-		<div class="wrap-header-mobile text-center" style="background-color: black; color: white;">
+		<div class="wrap-header-mobile text-center">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href=""><img src="{% static 'images/icons/prw.png'%}" alt="IMG-LOGO"></a>
+				<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
 			</div>
 			<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
 				<span class="test">
-                    <a href="" class="text-light">SHOP</a>
+                    <a href="#" class="text-dark">Log Out</a>
 				</span>
 			</div>
 		</div>
@@ -252,27 +255,22 @@
 				<h4 class="mt-4 font-weight-bold">Contact</h4>
 				<div class="contactbtn mt-3">
 					<div class="bg-black">
-						<div class="d-flex justify-content-between">
+						<div class="d-flex">
 							<div class="p-3"><i class="fa fa-phone mt-1"></i></div>
 							<div class="p-3"><a href="#">{{ data.phone_number }}</a></div>
-							<div class="p-3"><a href="#"><i class="fa fa-angle-right text-light text-right" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
 					<div class=" bg-black mt-2">
-						<div class="d-flex justify-content-between">
+						<div class="d-flex">
 							<div class="p-3"><i class="fa fa-envelope mt-1"></i></div>
 							<div class="p-3"><a href="#">{{ data.email }}</a></div>
-							<div class="p-3"><a href="#"><i class="fa fa-angle-right text-light text-right" aria-hidden="true"></i></a></div>
-
 						</div>
 					</div>
 
 					<div class=" bg-black mt-2">
-						<div class="d-flex justify-content-between">
-							<div class="p-3"><i class="fa fa-map-marker mt-1"></i></div>
+						<div class="d-flex">
+							<div class="p-3"><i class="fa fa-map-marker mt-1 pl-2"></i></div>
 							<div class="p-3"><a href="#">{{ data.address }}</a></div>
-							<div class="p-3"><a href="#"><i class="fa fa-angle-right text-light text-right" aria-hidden="true"></i></a></div>
-
 						</div>
 					</div>
 				</div>
@@ -282,32 +280,33 @@
 		<div class="container mt-2 biodata bg-dark p-3">
 			<div class="container contact-btn">
 				<div class="container social-links mt-2 sec-relate-product">
-					<div class="p-t-5 p-b-5">
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-facebook"></i>
-						</a>
-
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-instagram"></i>
-						</a>
-
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-pinterest-p"></i>
-						</a>
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-youtube"></i>
-						</a>
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-google"></i>
-						</a>
-						<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-twitter"></i>
-						</a>
-						<!-- <a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
-							<i class="fa fa-globe"></i>
-						</a> -->
-					</div>
-					
+							<div class="owl-carousel  owl-theme">
+								<div class="item">
+									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+										<i class="fa fa-facebook socialicons-designs"></i>
+									</a>
+								</div>
+								<div class="item">
+									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+										<i class="fa fa-instagram socialicons-designs"></i>
+									</a>
+								</div>
+								<div class="item">
+									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+										<i class="fa fa-pinterest-p socialicons-designs"></i>
+									</a>
+								</div>
+								<div class="item">
+									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+										<i class="fa fa-youtube socialicons-designs"></i>
+									</a>
+								</div>
+								<div class="item">
+									<a href="#" class="fs-28 cl7 hov-cl1 trans-04 m-r-16">
+										<i class="fa fa-google socialicons-designs"></i>
+									</a>
+								</div>
+							</div>
 				</div>
 			</div>
 		</div>
@@ -315,17 +314,17 @@
 		<!-- PERSONAL & PROFESSIONAL INFORMATION  -->
 		<div class="container p-4 bg-dark mt-2">
 			<ul class="nav nav-tabs infoanchor" id="myTab" role="tablist">
-				<!-- <li class="nav-item">
+				<li class="nav-item">
 				  <a class="nav-link active tabdesign" id="professional-tab" data-toggle="tab" href="#professional" role="tab" aria-controls="professional" aria-selected="true">Professional</a>
 				</li>
 				<li class="nav-item">
 				  <a class="nav-link tabdesign" id="skills-tab" data-toggle="tab" href="#skills" role="tab" aria-controls="skills" aria-selected="false">Skills</a>
-				</li> -->
+				</li>
 			  </ul>
 			  <div class="tab-content p-4" id="myTabContent">
 				
 				<!-- PROFESSIONAL INFORMATION  -->
-				<!-- <div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
+				<div class="tab-pane fade show active" id="professional" role="tabpanel" aria-labelledby="professional-tab">
 					<div class="mt-2 mb-2">
 						<h5 class="font-weight-bold">Full-stack Developer</h5>
 						<h6>Techmelba International</h6>
@@ -343,10 +342,10 @@
 							<span> Muhammadpur, Dhaka</span>
 						</p>
 					</div>
-				</div> -->
+				</div>
 
 				<!-- SKILLS INFORMATION  -->
-				<!-- <div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
+				<div class="tab-pane fade" id="skills" role="tabpanel" aria-labelledby="skills-tab">
 					<div class="skills">
 						<p class="mb-1"> 
 							<span class="dot"></span> 
@@ -365,7 +364,7 @@
 							Graphics Design
 						</p>
 					</div>
-				</div> -->
+				</div>
 			  </div>
 		</div>
 
@@ -376,13 +375,12 @@
 
 		<div class="container mt-4 text-center">
 			<h5 class="font-weight-bold text-uppercase"> </h5>
-			<h5 class="mt-2">  <a href=""> Click here </a>to view Files or Resume.</p>
+			<h5 class="mt-2">  <a href="#"> Click here </a>to view Files or Resume.</p>
 		</div>
-
 		{% if auth %}
-			<div class="container mt-5 text-center">
-				<a href="http://127.0.0.1:8000/profile/edit/{{ data.id }}" class="btn btn-danger">Edit Profile</a>
-			</div>
+		<div class="container mt-5 text-center">
+			<a href="http://127.0.0.1:8000/profile/edit/{{ data.id }}" class="btn btn-danger">Edit Profile</a>
+		</div>
 		{% endif %}
 	
     </section>
@@ -414,6 +412,8 @@
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/bootstrap/js/popper.js'%}"></script>
 	<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js'%}"></script>
+	<script src="{% static 'vendor/owl.carousel/owl.carousel.min.js' %}"></script>
+
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/select2/select2.min.js'%}"></script>
 	<script>
@@ -445,6 +445,29 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static 'js/main.js'%}"></script>
+	<script>
+		$(document).ready(function(){
+			$('.owl-carousel').owlCarousel({
+				loop:true,
+				margin:10,
+				nav:false,
+				autoplay:true,
+				autoplayTimeout:2000,
+				autoplayHoverPause:true,
+				responsive:{
+					0:{
+						items:5
+					},
+					600:{
+						items:5
+					},
+					1000:{
+						items:5
+					}
+				}
+			})
+		});
+	</script>
 	
 </body>
 </html>
