--- a/templates/User/editProfile.html
+++ b/templates/User/editProfile.html
@@ -174,29 +174,40 @@
 		font-size: 16px;
 		font-weight: bold;
 	}
+	img.prefacelogo{
+			width: 50%;
+		}
+		
+		@media only screen and (max-width: 765px)  {
+			.navigation{
+				display: none;
+			}
+		}
+		
+		@media only screen and (min-width: 768px) and (max-width: 1024px)  {
+			body {
+				padding-left:20%;
+				padding-right:20%;
+			}
+			header{
+				display: none;
+			}
+		}
+		@media only screen and (min-width: 1025px){
+			body {
+				padding-left:30%;
+				padding-right:30%;
+			}
+			header{
+				display: none;
+			}
+		}
 	
 </style>
 </head>
 <body class="animsition">
     <!-- Header -->
 	<header class="header-v2" >
-		<!-- Header desktop -->
-		<div class="container-menu-desktop trans-03">
-			<div class="wrap-menu-desktop">
-				<nav class="limiter-menu-desktop p-l-45">
-					<div class="logo-mobile">
-						<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
-					</div>
-					<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
-						<span class="test mr-4">
-							<a href="#" class="text-dark">Log Out</a>
-						</span>
-					</div>
-				</nav>
-			</div>	
-		</div>
-
-		<!-- Header Mobile -->
 		<div class="wrap-header-mobile text-center">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
@@ -211,6 +222,20 @@
 	</header>
 
     <section class="pb-5 editForm" style="background: black; color: white;">
+		<!-- NAVIGATION FOR DESKTOP  -->
+		<div class="navigation" style="background-color:white; color:black; font-weight:bold;">
+			<div class="container p-3">
+				<div class="row">
+					<div class="col-md-6 col-6 col-sm-6">
+						<a href="/"><img class="prefacelogo" src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+					</div>
+					<div class="col-md-6 col-6 col-sm-6 text-right mt-2">
+						<a href="#" class="text-dark font-weight-bold">Log Out</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- NAVIGATION ENDS FOR DEKTOP  -->
 		<div class="coverimage">
 			<img src="/media/{{ data.cover_picture }}" class="img-fluid responsive" alt="CoverImg">
 		</div>
@@ -288,7 +313,7 @@
 						</div>
 					</div>
 						
-					<div class="container mt-4 text-right">
+					<div class="container mt-4">
 						<a href="javascript:void(0);" class="linksBtn" id="socialAddMore">Add Links</a>
 					</div>
 				</div>
