--- a/templates/User/userProfile.html
+++ b/templates/User/userProfile.html
@@ -174,28 +174,40 @@
 			border-radius: 50%;
 			display: inline-block;
 			}
+
+		img.prefacelogo{
+			width: 50%;
+		}
+		
+		@media only screen and (max-width: 765px)  {
+			.navigation{
+				display: none;
+			}
+		}
+		
+		@media only screen and (min-width: 768px) and (max-width: 1024px)  {
+			body {
+				padding-left:20%;
+				padding-right:20%;
+			}
+			header{
+				display: none;
+			}
+		}
+		@media only screen and (min-width: 1025px){
+			body {
+				padding-left:30%;
+				padding-right:30%;
+			}
+			header{
+				display: none;
+			}
+		}
 </style>
 </head>
 <body class="animsition">
-    <!-- Header -->
+	<!-- Header -->
 	<header class="header-v2" >
-		<!-- Header desktop -->
-		<div class="container-menu-desktop trans-03">
-			<div class="wrap-menu-desktop">
-				<nav class="limiter-menu-desktop p-l-45">
-					<div class="logo-mobile">
-						<a href="/"><img src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
-					</div>
-					<div class="btn-show-menu-mobile hamburger hamburger--squeeze ">
-						<span class="test mr-4">
-							<a href="#" class="text-dark">Log Out</a>
-						</span>
-					</div>
-				</nav>
-			</div>	
-		</div>
-
-		<!-- Header Mobile -->
 		<div class="wrap-header-mobile text-center">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
@@ -208,7 +220,20 @@
 			</div>
 		</div>
 	</header>
+
 	<section class="pb-5" style="background-color: black; color: whitesmoke;">
+		<div class="navigation" style="background-color:white; color:black; font-weight:bold;">
+			<div class="container p-3">
+				<div class="row">
+					<div class="col-md-6 col-6 col-sm-6">
+						<a href="/"><img class="prefacelogo" src="{% static 'images/icons/pre-black.png'%}" alt="IMG-LOGO"></a>
+					</div>
+					<div class="col-md-6 col-6 col-sm-6 text-right mt-2">
+						<a href="#" class="text-dark font-weight-bold">Log Out</a>
+					</div>
+				</div>
+			</div>
+		</div>
         
 		<!-- COVER PHOTO -->
         <div class="coverimage">
@@ -227,7 +252,7 @@
 			<div class="p-3 bg-dark">
 				<h5 style="font-size:25px; font-weight: bold;">{{ data.name }}</h5>
 				<p>{{ data.bio }}</p>
-				<div class="d-flex  mt-3">
+				<div class="d-flex  mt-5">
 					<div class="p-2">
 						<a href="#" class="mybtn">Save Contact</a>
 					</div>
@@ -240,7 +265,7 @@
 			<div class="p-3 bg-dark mt-2">
 				<h4 class="mt-4 font-weight-bold">About</h4>
 				<p class="mt-3">{{ data.about }}</p>
-				<div class="d-flex  mt-3">
+				<div class="d-flex  mt-5">
 					<div class="p-2">
 						<a href="tel:{{ data.phone_number }}" class="mybtn"><i class="fa fa-phone"></i> Call Now</a>
 					</div>
